# talk-repo-1

./: .gitignore  README.md  docker-compose.test.yml  main.py  pyproject.toml
application/dto/: task_dto.py  user_dto.py
application/use_cases/: auth_use_cases.py
domain/entities/: task.py  user.py
domain/repositories/: task_repository.py  user_repository.py
domain/value_objects/: email.py  password.py  task_id.py  user_id.py
infrastructure/auth/: jwt_service.py  password_service.py
infrastructure/config/: auth.py  database.py
infrastructure/database/: base.py  models.py
infrastructure/repositories/: task_repository_impl.py  user_repository_impl.py
presentation/api/: auth_router.py  task_router.py
presentation/middleware/: auth.py
